# pico2-daq-mcu-mcp3301

./: CMakeLists.txt  mcp3301.pio  pico2_daq_mcp3301.c
